--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello Buddy!</h1>
-    <a href="docfile/file1.png" download>[File 1] Click here to download</a>
+    <a href="docfile/*.pdf" download>Click here to download</a>
 </body>
 </html>
