--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Print this Document</title>
 </head>
 <body>
+<style>
+    .redme {
+        color: red;
+    }
+</style>    
     <h1>Hello Buddy!</h1>
-    <a href="docfile/*.pdf" download>Click here to download</a>
+    <a href="docfile/NOA_HLF817.aspx-2.pdf" download="file1"><span class="redme">[File 1]</span> Click here to download</a>
+    <a href="docfile/PN_HLF819.aspx.aspx-2.pdf" download="file2">Click here to download</a>
 </body>
 </html>
