--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         color: red;
     }
 </style>    
-    <h1>Hello Buddy!</h1>
-    <a href="docfile/NOA_HLF817.aspx-2.pdf" download="file1"><span class="redme">[File 1]</span> Click here to download</a>
-    <a href="docfile/PN_HLF819.aspx.aspx-2.pdf" download="file2">Click here to download</a>
+    <h2>Hello Buddy!</h2>
+    <h3>Download and Print this file</h3>
+    <p>
+        <a href="docfile/NOA_HLF817.aspx-2.pdf" download="file1"><span class="redme">[File 1]</span> Click here to download</a>
+    </p>
+    <p>
+        <a href="docfile/PN_HLF819.aspx.aspx-2.pdf" download="file2">Click here to download</a>
+    </p>
 </body>
 </html>
