--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <style>
     .redme {
         color: red;
+        text-decoration: none;
     }
 </style>    
     <h2>Hello Buddy!</h2>
@@ -18,7 +19,7 @@
         <a href="docfile/NOA_HLF817.aspx-2.pdf" download="file1"><span class="redme">[File 1]</span> Click here to download</a>
     </p>
     <p>
-        <a href="docfile/PN_HLF819.aspx.aspx-2.pdf" download="file2">Click here to download</a>
+        <a href="docfile/PN_HLF819.aspx.aspx-2.pdf" download><span class="redme">[File 2]</span>Click here to download</a>
     </p>
 </body>
 </html>
