--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/jpg" href="dp.png"/>
     <title>Print this Document</title>
 </head>
 <body>
@@ -16,10 +17,10 @@
     <h2>Hello Buddy!</h2>
     <h3>Download and Print this file</h3>
     <p>
-        <a href="docfile/NOA_HLF817.aspx-2.pdf" download="file1"><span class="redme">[File 1]</span> Click here to download</a>
+        <span class="redme">[File 1]</span> <a href="docfile/NOA_HLF817.aspx-2.pdf" download="file1"> Click here to download</a>
     </p>
     <p>
-        <a href="docfile/PN_HLF819.aspx.aspx-2.pdf" download><span class="redme">[File 2]</span>Click here to download</a>
+        <span class="redme">[File 2]</span> <a href="docfile/PN_HLF819.aspx.aspx-2.pdf" download>Click here to download</a>
     </p>
 </body>
 </html>
