--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Hello Buddy!</h2>
     <h3>Download and Print this file</h3>
     <p>
-        <span class="redme">[File 1]</span> <a href="/docfile/NOA_HLF817.aspx-2.pdf" download> Click here to download</a>
+        <span class="redme">[File 1]</span> <a href="docfile/NOA_HLF817.aspx-2.pdf" download> Click here to download</a>
     </p>
     <p>
         <span class="redme">[File 2]</span> <a href="/docfile/PN_HLF819.aspx.aspx-2.pdf" download="file2">Click here to download</a>
