--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="dp.png"/>
-    <title>### Print this Document ###</title>
+    <title>*** Print this Document ***</title>
 </head>
 <body>
 <style>
@@ -20,7 +20,7 @@
         <span class="redme">[File 1]</span> <a href="docfile/NOA_HLF817.aspx-2.pdf" download> Click here to download</a>
     </p>
     <p>
-        <span class="redme">[File 2]</span> <a href="/docfile/PN_HLF819.aspx.aspx-2.pdf" download="file2">Click here to download</a>
+        <span class="redme">[File 2]</span> <a href="docfile/PN_HLF819.aspx.aspx-2.pdf" download="file2">Click here to download</a>
     </p>
 </body>
 </html>
