--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span class="redme">[File 1]</span> <a href="docfile/NOA_HLF817.aspx-2.pdf" download> Click here to download</a>
     </p>
     <p>
-        <span class="redme">[File 2]</span> <a href="docfile/PN_HLF819.aspx.aspx-2.pdf" download="file2">Click here to download</a>
+        <span class="redme">[File 2]</span> <a href="docfile/SHIPPING_LABEL_23022602YB4DB7X.pdf" download="file2">Click here to download</a>
     </p>
 </body>
 </html>
