--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Hello Buddy!</h2>
     <h3>Download and Print this file</h3>
     <p>
-        <span class="redme">[File 1]</span> <a href="docfile/PIcard.docx" download> Click here to download</a>
+        <span class="redme">[File-1]</span> <a href="docfile/PIcard.pdf" download> Click here to download</a>
     </p>
     <p>
         <!-- <span class="redme">[File 2]</span> <a href="docfile/SHIPPING_LABEL_23022602YB4DB7X.pdf" download="file2">Click here to download</a> -->
